build: Java 17 artifacts unlaxer-common-jdk17 / unlaxer-dsl-jdk17 (3.1.1, #311)
本体 unlaxer-common / unlaxer-dsl は従来どおり Java 21 (major 65) のまま、同じソースを
release 17 で再コンパイルした別 artifactId を追加する（Java 17 利用者向けの差し替え）。

- 新 reactor モジュール unlaxer-common-jdk17 / unlaxer-dsl-jdk17: ソース・リソース・テストは
  既存モジュールのディレクトリを参照（ソースは 1 本）。dsl-jdk17 は common-jdk17 だけに依存。
  テストは JDK 17 上で自動実行（profile jdk17-tests）、sources/javadoc jar と flatten pom 付き
- ソースを --release 17 で通る形に: unlaxer-dsl の pattern switch 83 箇所を同順の instanceof
  連鎖へ、テストの ExecutorService#close / Thread#threadId を 17 の API へ、既定文字コード依存
  （new String(byte[]) 等）を UTF-8 明示に（Java 18+ の既定と同じ）
- CodegenMain --java-release 21|17（既定 21 = 出力不変）。17 は Evaluator の dispatch を
  instanceof 連鎖にし、生成 Java 全体が --release 17 で通る
- in-memory javac テストは生成物を --release 17 で検査（Evaluator は実行 JDK に追従）
- CI: JDK 17 で -jdk17 モジュールを build+test し major 61 を要求、JDK 21 で本体 65 / -jdk17 61
- release-central.sh / release-central.yml の deploy 対象に -jdk17 モジュールを追加
- revision 3.1.1、CHANGELOG / README に「Java 17 は <artifact>-jdk17」

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>