@@ -48,7 +48,7 @@ public class NestedHelperRuntimeTest {
         Path output = temporary.newFolder().toPath();
         try (var manager = compiler.getStandardFileManager(diagnostics, Locale.ROOT, StandardCharsets.UTF_8)) {
             boolean success = compiler.getTask(null, manager, diagnostics,
-                List.of("--enable-preview", "--release", "21", "-classpath", System.getProperty("java.class.path"),
+                List.of("--release", "17", "-classpath", System.getProperty("java.class.path"),
                     "-d", output.toString()), null, units).call();
             assertTrue(body + "\n" + diagnostics.getDiagnostics(), success);
         }
