@@ -168,7 +168,7 @@ public class RuleTriviaConformanceTest {
         try (var manager = compiler.getStandardFileManager(diagnostics, Locale.ROOT,
                 StandardCharsets.UTF_8)) {
             boolean compiled = compiler.getTask(null, manager, diagnostics,
-                List.of("--enable-preview", "--release", "21", "-classpath",
+                List.of("--release", "17", "-classpath",
                     System.getProperty("java.class.path") + File.pathSeparator, "-d", output.toString()),
                 null, units).call();
             assertTrue(diagnostics.getDiagnostics().toString(), compiled);
