@@ -87,7 +87,7 @@ public class ScopeCaptureBindingTest {
         };
         try (var manager = compiler.getStandardFileManager(diagnostics, null, null)) {
             assertTrue(diagnostics.getDiagnostics().toString(), compiler.getTask(null, manager, diagnostics,
-                List.of("--release", "21", "--enable-preview", "-classpath", System.getProperty("java.class.path"),
+                List.of("--release", "17", "-classpath", System.getProperty("java.class.path"),
                     "-d", output.toString()), null, List.of(unit)).call());
         }
         try (var loader = new URLClassLoader(new URL[]{output.toUri().toURL()}, getClass().getClassLoader());
